packages/tree-sitter-git-conventional-commit-subject/corpus/invalid.txt
================================================================================
type only
================================================================================
type
--------------------------------------------------------------------------------

(ERROR
  (type))

================================================================================
leading space
================================================================================
 type: message
--------------------------------------------------------------------------------

(source
  (ERROR
    (UNEXPECTED '))
  (type)
  (message))

================================================================================
space in type
================================================================================
ty pe: message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
space between type and colon
================================================================================
type : message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
space between type and open-paren
================================================================================
type (scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (scope)
  (message))

================================================================================
space between close-paren and colon
================================================================================
type(scope) : message
--------------------------------------------------------------------------------

(source
  (type)
  (scope)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
space before open-paren, also missing close-paren
================================================================================
type (scope: message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
open-paren replaced by space
================================================================================
type scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
leading space with scope
================================================================================
 type(scope): message
--------------------------------------------------------------------------------

(source
  (ERROR
    (UNEXPECTED '))
  (type)
  (scope)
  (message))

================================================================================
missing colon
================================================================================
type(scope) message
--------------------------------------------------------------------------------

(ERROR
  (type)
  (scope)
  (UNEXPECTED '))

================================================================================
11.
================================================================================
type(scope  message
--------------------------------------------------------------------------------

(ERROR
  (type)
  (ERROR
    (UNEXPECTED ')))

================================================================================
12.
================================================================================
type scope) message
--------------------------------------------------------------------------------

(ERROR
  (type)
  (UNEXPECTED ')
  (UNEXPECTED '))

================================================================================
13.
================================================================================
type (scope  message
--------------------------------------------------------------------------------

(ERROR
  (type)
  (ERROR
    (UNEXPECTED '))
  (ERROR
    (UNEXPECTED ')))

================================================================================
14.
================================================================================
type scope)! message
--------------------------------------------------------------------------------

(ERROR
  (type)
  (ERROR
    (UNEXPECTED '))
  (UNEXPECTED '))

================================================================================
15.
================================================================================
type (sc!ope  message
--------------------------------------------------------------------------------

(ERROR
  (type)
  (ERROR
    (UNEXPECTED '))
  (ERROR
    (UNEXPECTED ')))

================================================================================
16.
================================================================================
type sco!pe) message
--------------------------------------------------------------------------------

(ERROR
  (type)
  (ERROR
    (UNEXPECTED '))
  (UNEXPECTED '))

================================================================================
17.
================================================================================
type scope! message
--------------------------------------------------------------------------------

(ERROR
  (type)
  (ERROR
    (UNEXPECTED '))
  (UNEXPECTED '))

================================================================================
18.
================================================================================
ty pe(scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (scope)
  (message))

================================================================================
19.
================================================================================
type( scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
20.
================================================================================
type(sc ope): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
21.
================================================================================
type(scope ): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
22.
================================================================================
ty pe(sco pe): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
23.
================================================================================
type(scope!): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR))
  (message))

================================================================================
24.
================================================================================
type(sco!pe): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR))
  (message))

================================================================================
25.
================================================================================
type(!scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR))
  (message))

================================================================================
26.
================================================================================
type(scope!) : message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR))
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
27.
================================================================================
type(sco!pe ): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
28.
================================================================================
type(!sco pe): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
29.
================================================================================
type(! scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
30.
================================================================================
type( !scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
31.
================================================================================
type (!scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (scope
    (ERROR))
  (message))

================================================================================
32.
================================================================================
type! (scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (scope)
  (message))

================================================================================
33.
================================================================================
type!( scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
34.
================================================================================
type!(sc ope): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
35.
================================================================================
type!(scope ): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (scope
    (ERROR
      (UNEXPECTED ')))
  (message))

================================================================================
36.
================================================================================
type!(scope) : message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (scope)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
37.
================================================================================
ty pe!(scope): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (scope)
  (message))

================================================================================
38.
================================================================================
type(!): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (message))

================================================================================
39.
================================================================================
type!(): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (message))

================================================================================
40.
================================================================================
ty!pe(): message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (message))

================================================================================
41.
================================================================================
!type(): message
--------------------------------------------------------------------------------

(source
  (ERROR)
  (type)
  (ERROR)
  (message))

================================================================================
42.
================================================================================
!type: message
--------------------------------------------------------------------------------

(source
  (ERROR)
  (type)
  (message))

================================================================================
43.
================================================================================
type(!: message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (message))

================================================================================
44.
================================================================================
type)!: message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (message))

================================================================================
45.
================================================================================
type (!: message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
46.
================================================================================
type )!: message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
47.
================================================================================
type( !: message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
48.
================================================================================
type) !: message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
49.
================================================================================
type(! : message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
50.
================================================================================
type)! : message
--------------------------------------------------------------------------------

(source
  (type)
  (ERROR)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
51.
================================================================================
()invalid : message
--------------------------------------------------------------------------------

(source
  (ERROR)
  (type)
  (ERROR
    (UNEXPECTED '))
  (message))

================================================================================
52.
================================================================================
(scope!: message
--------------------------------------------------------------------------------

(source
  (ERROR)
  (type)
  (message))

================================================================================
53.
================================================================================
)invalid!: message
--------------------------------------------------------------------------------

(source
  (ERROR)
  (type)
  (message))

================================================================================
54.
================================================================================
(scope! message
--------------------------------------------------------------------------------

(ERROR
  (ERROR
    (type)
    (UNEXPECTED '))
  (type))

================================================================================
55.
================================================================================
)invalid! message
--------------------------------------------------------------------------------

(ERROR
  (ERROR
    (type)
    (UNEXPECTED '))
  (type))
